<resources>
    <string name="app_name">MyBookBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>
    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>
    <string name="bookName">Enter Book name</string>
    <string name="authorName">Enter author name</string>
    <string name="categoryName">Enter book category</string>
    <string name="pickupLocation">Enter pick up address</string>
    <string name="costprice">Enter cost in $(per day for rent)</string>
    <string name="createListingButton">Place rent/sell request</string>
    <string name="radio_rent">Rent</string>
    <string name="radio_sell">Sell</string>
    <string name="choose_from_library">Upload image from library</string>
    <string name="use_camera">Upload image using camera</string>
    <string name="user_name">Name</string>
    <string name="uni_emailid">University email</string>
    <string name="user_university">Current university</string>
    <string name="ButtonCreateProfile">Create Profile</string>
    <string name="uploadImage">Upload Image</string>
    <string name="myListings">My Listings</string>
    <string name="recentlyViewedListings">Recently Viewed Listings</string>
    <string name="booksRented">Books I have rented</string>
    <string name="search_hint">Book name</string>
    <string name="search_title">Book name</string>
    <string name="ListingDetailsDays">Days you wish to rent</string>
    <string name="TextUserRating">Rate user:scale 0-5</string>
    <string name="filterResults">Filter status</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyCthzs9WHUmBNvh6jfnbKlUEPbXtYLdit4</string>
</resources>
